# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff_check.yml
gendiff/: __init__.py
gendiff/modules/: __init__.py  bool_lower.py  diff.py  generate_diff.py  parse.py  parser.py  parser_args.py  prepare_data.py  prepare_dict.py
gendiff/modules/formaters/: format_applying.py  json.py  plain.py  stylish.py
gendiff/modules/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_bool_lower.py  test_diff.py  test_formaters.py  test_formatters.py  test_generate_diff.py  test_json.py  test_plain.py  test_prepare_data.py  test_prepare_dict.py  test_stylish.py  test_value_for_formater.py
tests/fixtures/: file1_example.json  file1_example.yml  file2.yml  file2_example.json  file2_example.yml  result_of_json.txt
