[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "The utility that shows differences between two files"
authors = ["svetlana_akaemova <akaemova.sv@mail.ru>"]
repository = "https://github.com/SvetlanaAkaemova/python-project-50.git"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = ">=7.1.3"
pytest-cov = "^3.0.0"
PyYAML = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.pytest.ini_options]
pythonpath = [
 ".",
]
